--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,6 +10,9 @@
 }
 @layer base {
   h1 {
-    @apply font-bold text-4xl md:text-5xl;
+    @apply font-bold text-5xl;
+  }
+  h2 {
+    @apply font-bold text-2xl;
   }
 }
